Add soft dependency hook

--- a/Quests-Paper/src/main/resources/plugin.yml
+++ b/Quests-Paper/src/main/resources/plugin.yml
@@ -4,3 +4,5 @@ main: me.flame.quests.spigot.TrialForDevRoom
 api-version: '1.21'
 authors: [ FlameyosSnowy ]
 website: https://github.com/FlameyosSnowy
+softdepend:
+  - PlaceholderAPI
